--- a/modules/report/pom.xml
+++ b/modules/report/pom.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  
+
   <parent>
     <groupId>com.opengamma.strata</groupId>
     <artifactId>strata-parent</artifactId>
     <version>2.12.56-SNAPSHOT</version>
     <relativePath>..</relativePath>
-  </parent>  
+  </parent>
   <artifactId>strata-report</artifactId>
   <packaging>jar</packaging>
   <name>Strata-Report</name>
@@ -51,6 +53,12 @@
       <artifactId>strata-product</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.diffblue.cover</groupId>
+      <artifactId>cover-annotations</artifactId>
+      <version>1.3.0</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>com.opengamma.strata</groupId>
       <artifactId>strata-measure</artifactId>
     </dependency>
@@ -62,7 +70,7 @@
       <groupId>com.opengamma.strata</groupId>
       <artifactId>strata-pricer</artifactId>
     </dependency>
-    
+
     <!-- Test dependencies -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -72,6 +80,17 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-params</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>4.9.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -98,7 +117,9 @@
     <profile>
       <id>build-report-tool</id>
       <activation>
-        <property><name>dist</name></property>
+        <property>
+          <name>dist</name>
+        </property>
       </activation>
       <build>
         <plugins>
